--- a/index.html
+++ b/index.html
@@ -1,28 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Mawira – Software Engineer Portfolio</title>
-    <meta name="description" content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide." />
+    <meta
+      name="description"
+      content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide."
+    />
     <meta name="author" content="Brian Mawira" />
-    <meta name="keywords" content="software engineer Kenya, freelance developer, API development, Flutter apps, Node.js backend, web developer Kenya" />
+    <meta
+      name="keywords"
+      content="software engineer Kenya, freelance developer, API development, Flutter apps, Node.js backend, web developer Kenya"
+    />
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Brian Mawira – Software Engineer Portfolio" />
-    <meta property="og:description" content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide." />
+    <meta
+      property="og:title"
+      content="Brian Mawira – Software Engineer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://brianmawira.dev" />
     <meta property="og:image" content="https://brianmawira.dev/og-image.jpg" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Brian Mawira – Software Engineer Portfolio" />
-    <meta name="twitter:description" content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide." />
+    <meta
+      name="twitter:title"
+      content="Brian Mawira – Software Engineer Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Hire Brian Mawira, a freelance software engineer in Kenya. Expert in APIs, mobile apps, and web development. Available worldwide."
+    />
     <meta name="twitter:image" content="https://brianmawira.dev/og-image.jpg" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://brianmawira.dev" />
+
+    <!-- Privacy-friendly analytics by Plausible -->
+    <script
+      async
+      src="https://plausible.io/js/pa-WoitnEbbw6QXCHVVIZgzh.js"
+    ></script>
+    <script>
+      (window.plausible =
+        window.plausible ||
+        function () {
+          (plausible.q = plausible.q || []).push(arguments);
+        }),
+        (plausible.init =
+          plausible.init ||
+          function (i) {
+            plausible.o = i || {};
+          });
+      plausible.init();
+    </script>
   </head>
 
   <body>
