use umami analytics

--- a/index.html
+++ b/index.html
@@ -42,24 +42,12 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://brianmawira.dev" />
 
-    <!-- Privacy-friendly analytics by Plausible -->
+    <!-- umami analytics -->
     <script
-      async
-      src="https://plausible.io/js/pa-WoitnEbbw6QXCHVVIZgzh.js"
+      defer
+      src="http://143.198.239.46:3000/script.js"
+      data-website-id="cfc1ca72-d70c-4aac-a534-cc1e13d18135"
     ></script>
-    <script>
-      (window.plausible =
-        window.plausible ||
-        function () {
-          (plausible.q = plausible.q || []).push(arguments);
-        }),
-        (plausible.init =
-          plausible.init ||
-          function (i) {
-            plausible.o = i || {};
-          });
-      plausible.init();
-    </script>
   </head>
 
   <body>
