--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- umami analytics -->
     <script
       defer
-      src="http://143.198.239.46:3000/script.js"
+      src="https://umami-analytics.mawirab.com/script.js"
       data-website-id="cfc1ca72-d70c-4aac-a534-cc1e13d18135"
     ></script>
   </head>
